--- a/App/app/views/application/start.html.erb
+++ b/App/app/views/application/start.html.erb
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>App</title>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
+  <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+  <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
 <div class="container-fluid">
 	<div class="row-fluid">
 		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -29,3 +40,5 @@
 		</div>
 	</div>
 </div>
+</body>
+</html>
