--- a/App/app/views/application/achievements.html.erb
+++ b/App/app/views/application/achievements.html.erb
@@ -4,7 +4,6 @@
   <title>App</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
-  <script type="text/javascript" src="https://www.google.com/jsapi"></script>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -14,7 +13,7 @@
 		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 			<div class="container">
 				<div class="col-xs-2">
-					<a href="/" class="btn btn-default navbar-btn">&lt; Back</a>
+					<a href="/show_repo/<%= @repo %>" class="btn btn-default navbar-btn">&lt; Repo</a>
 				</div>
 				<div class="col-xs-8" style="text-align: center; margin-top:8px;">
 					<h4>Achieve!</h4>
@@ -23,18 +22,24 @@
 		</nav>
 	</div>
 	<div style="margin-top: 70px;"></div>
-	<div class="row-fluid">
-		<div class="col-xs-12" style="text-align:center;">
-			<% if flash[:error] %>
-				<div class="alert alert-danger"><%= flash[:error] %></div>
-			<% end %>
-			<ul class="list-group">
-				<% @repos.each do |repo| %>
-					<a href="/show_repo/<%= repo %>" class="list-group-item"><%= repo %></a>
-				<% end %>
-			</ul>
-		</div>
-	</div>
+	<div class="row">
+    <div class="col-xs-12">
+      <% @achievements.each do |k,v| %>
+        <h4><%= k.to_s %></h4>
+        <hr/>
+        <% v.each do |a| %>
+          <div class="alert alert-success">
+            <a ref="#" class="alert-link"><%= a.achievement %></a>
+            <br/>
+            <div class="pull-right">
+              achieved on <%= a.achieved.to_s %>
+            </div>
+            <div class="clearfix"></div>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
 </div>
 </body>
 </html>
