--- a/App/app/views/application/show_repo.html.erb
+++ b/App/app/views/application/show_repo.html.erb
@@ -6,7 +6,7 @@
   <%= javascript_include_tag 'application' %>
   <script type="text/javascript">
   	$(function () { 
-      $('#container').highcharts({
+      $('#commits_pie').highcharts({
         chart: {
                 plotBackgroundColor: null,
                 plotBorderWidth: null,
@@ -33,7 +33,41 @@
                 name: 'Commits',
                 data: [
                     <% @num_of_commits.each do |commit| %>
-                    	<%= raw "['#{commit[1]}',#{commit[0]}]," %>
+                    	<%= raw "['#{commit[0]}',#{commit[1]}]," %>
+                    <% end %>
+                ]
+            }]
+      });
+      $('#closed_tickets_pie').highcharts({
+        chart: {
+                plotBackgroundColor: null,
+                plotBorderWidth: null,
+                plotShadow: false
+            },
+            title: {
+                text: 'Closed Tickets per Person'
+            },
+            tooltip: {
+                pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
+            },
+            plotOptions: {
+                pie: {
+                    allowPointSelect: true,
+                    cursor: 'pointer',
+                    dataLabels: {
+                        enabled: false
+                    },
+                    showInLegend: true
+                }
+            },
+            series: [{
+                type: 'pie',
+                name: 'Commits',
+                data: [
+                    <% @closed_issues.each do |commit| %>
+                      <% if commit[0] != nil %>
+                      <%= raw "['#{commit[0]}',#{commit[1]}]," %>
+                      <% end %>
                     <% end %>
                 ]
             }]
@@ -70,17 +104,26 @@
 			</div>
 			<div class="clearfix"></div>
 			<ul class="nav nav-tabs" id="#mytabs">
-			  <li class="active"><a href="#num_of_commits" data-toggle="tab">Commits <% if @largest_commit_pos == 1 %><span class="badge"><%= image_tag "thumb-up-sm.svg" %></span><% end %></a></li>
+			  <li class="active"><a href="#num_of_commits" data-toggle="tab">Commits</a></li>
+        <li><a href="#closed_tickets" data-toggle="tab">Closed Tickets</a></li>
 			</ul>
 			<div class="tab-content">
 			  <div class="tab-pane active" id="num_of_commits">
 			  	<div style="margin-top: 70px;"></div>
-				<div class="row-fluid">
-					<div class="col-xs-12" style="text-align:center;">
-			  		    <div id="container" style="width:100%; height:280;"></div>
-					</div>
-				</div>
+  				<div class="row-fluid">
+  					<div class="col-xs-12" style="text-align:center;">
+  			  		<div id="commits_pie" style="width:100%; height:280;"></div>
+  					</div>
+  				</div>
 			  </div>
+        <div class="tab-pane" id="closed_tickets">
+          <div style="margin-top: 70px;"></div>
+          <div class="row-fluid">
+            <div class="col-xs-12" style="text-align:center;">
+              <div id="closed_tickets_pie" style="width:100%; height:280;"></div>
+            </div>
+          </div>
+        </div>
 			</div>
 		</div>
 	</div>
