--- a/App/app/views/application/show_repo.html.erb
+++ b/App/app/views/application/show_repo.html.erb
@@ -45,7 +45,7 @@
                 plotShadow: false
             },
             title: {
-                text: 'Closed Tickets per Person'
+                text: 'Merged Tickets per Person'
             },
             tooltip: {
                 pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
@@ -66,7 +66,41 @@
                 data: [
                     <% @closed_issues.each do |commit| %>
                       <% if commit[0] != nil %>
-                      <%= raw "['#{commit[0]}',#{commit[1]}]," %>
+                        <%= raw "['#{commit[0]}',#{commit[1]}]," %>
+                      <% end %>
+                    <% end %>
+                ]
+            }]
+      });
+      $('#merged_issues_pie').highcharts({
+        chart: {
+                plotBackgroundColor: null,
+                plotBorderWidth: null,
+                plotShadow: false
+            },
+            title: {
+                text: 'Closed Tickets per Person'
+            },
+            tooltip: {
+                pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
+            },
+            plotOptions: {
+                pie: {
+                    allowPointSelect: true,
+                    cursor: 'pointer',
+                    dataLabels: {
+                        enabled: false
+                    },
+                    showInLegend: true
+                }
+            },
+            series: [{
+                type: 'pie',
+                name: 'Commits',
+                data: [
+                    <% @merged_issues.each do |commit| %>
+                      <% if commit[0] != nil %>
+                        <%= raw "['#{commit[0]}',#{commit[1]}]," %>
                       <% end %>
                     <% end %>
                 ]
@@ -105,22 +139,28 @@
 			<div class="clearfix"></div>
 			<ul class="nav nav-tabs" id="#mytabs">
 			  <li class="active"><a href="#num_of_commits" data-toggle="tab">Commits</a></li>
-        <li><a href="#closed_tickets" data-toggle="tab">Closed Tickets</a></li>
+        <li><a href="#closed_tickets" data-toggle="tab">Closed</a></li>
+        <li><a href="#merged_issues" data-toggle="tab">Merged</a></li>
 			</ul>
 			<div class="tab-content">
 			  <div class="tab-pane active" id="num_of_commits">
-			  	<div style="margin-top: 70px;"></div>
-  				<div class="row-fluid">
+			  	<div class="row-fluid">
   					<div class="col-xs-12" style="text-align:center;">
   			  		<div id="commits_pie" style="width:100%; height:280;"></div>
   					</div>
   				</div>
 			  </div>
         <div class="tab-pane" id="closed_tickets">
-          <div style="margin-top: 70px;"></div>
           <div class="row-fluid">
             <div class="col-xs-12" style="text-align:center;">
               <div id="closed_tickets_pie" style="width:100%; height:280;"></div>
+            </div>
+          </div>
+        </div>
+        <div class="tab-pane" id="merged_issues">
+          <div class="row-fluid">
+            <div class="col-xs-12" style="text-align:center;">
+              <div id="merged_issues_pie" style="width:100%; height:280;"></div>
             </div>
           </div>
         </div>
