--- a/App/app/views/application/show_repo.html.erb
+++ b/App/app/views/application/show_repo.html.erb
@@ -38,6 +38,7 @@
                 ]
             }]
       });
+      <% if @closed_issues.count != 0 %>
       $('#closed_tickets_pie').highcharts({
         chart: {
                 plotBackgroundColor: null,
@@ -72,6 +73,8 @@
                 ]
             }]
       });
+      <% end %>
+      <% if @merged_issues.count != 0 %>
       $('#merged_issues_pie').highcharts({
         chart: {
                 plotBackgroundColor: null,
@@ -106,6 +109,7 @@
                 ]
             }]
       });
+      <% end %>
     });
   </script>
   <%= csrf_meta_tags %>
@@ -138,29 +142,41 @@
 			</div>
 			<div class="clearfix"></div>
 			<ul class="nav nav-tabs" id="#mytabs">
-			  <li class="active"><a href="#num_of_commits" data-toggle="tab">Commits</a></li>
-        <li><a href="#closed_tickets" data-toggle="tab">Closed</a></li>
-        <li><a href="#merged_issues" data-toggle="tab">Merged</a></li>
+  			  <li class="active"><a href="#num_of_commits" data-toggle="tab">Commits</a></li>
+          <li><a href="#closed_tickets" data-toggle="tab">Closed</a></li>
+          <li><a href="#merged_issues" data-toggle="tab">Merged</a></li>
 			</ul>
 			<div class="tab-content">
 			  <div class="tab-pane active" id="num_of_commits">
 			  	<div class="row-fluid">
   					<div class="col-xs-12" style="text-align:center;">
-  			  		<div id="commits_pie" style="width:100%; height:280;"></div>
+              <% if @num_of_commits.count != 0 %>
+  			  		  <div id="commits_pie" style="width:100%; height:280;"></div>
+              <% else %>
+                <h2>No Data.</h2>
+              <% end %>
   					</div>
   				</div>
 			  </div>
         <div class="tab-pane" id="closed_tickets">
           <div class="row-fluid">
             <div class="col-xs-12" style="text-align:center;">
-              <div id="closed_tickets_pie" style="width:100%; height:280;"></div>
+              <% if @closed_issues.count != 0 %>
+                <div id="closed_tickets_pie" style="width:100%; height:280;"></div>
+              <% else %>
+                <h2>No Data.</h2>
+              <% end %>
             </div>
           </div>
         </div>
         <div class="tab-pane" id="merged_issues">
           <div class="row-fluid">
             <div class="col-xs-12" style="text-align:center;">
-              <div id="merged_issues_pie" style="width:100%; height:280;"></div>
+              <% if @merged_issues.count != 0 %>
+                <div id="merged_issues_pie" style="width:100%; height:280;"></div>
+              <% else %>
+                <h2>No Data.</h2>
+              <% end %>
             </div>
           </div>
         </div>
