--- a/App/app/views/application/show_repositories.html.erb
+++ b/App/app/views/application/show_repositories.html.erb
@@ -25,9 +25,8 @@
 	<div style="margin-top: 70px;"></div>
 	<div class="row-fluid">
 		<div class="col-xs-12" style="text-align:center;">
-			<% if flash[:error] %>
-				<div class="alert alert-danger"><%= flash[:error] %></div>
-			<% end %>
+			<a href="/show_all_achievements" class="btn btn-primary">Show All Past Achievements</a>
+			<div style="margin-top: 10px;"></div>
 			<ul class="list-group">
 				<% @repos.each do |repo| %>
 					<a href="/show_repo/<%= repo %>" class="list-group-item"><%= repo %></a>
