add world rankings

--- a/App/app/views/application/start.html.erb
+++ b/App/app/views/application/start.html.erb
@@ -37,6 +37,7 @@
 			  		<%= submit_tag("Show Repositories", class: 'btn btn-primary') %>
 			  	</div>
 			<% end %>
+			<a href="/world_github_standings" class="btn btn-info">Check World Rankings</a>
 		</div>
 	</div>
 </div>
